added controller for user crud

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,5 +2,5 @@
 spring:
   data:
     mongodb:
-      uri: mongodb+srv://clustername@cluster0.l6ma0.mongodb.net/springStore
+      uri: mongodb+srv://customerInfo@cluster0.l6ma0.mongodb.net/springStore
       database: springStore
